--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.1",
+    "eslint-plugin-react": "^7.31.10",
     "express": "^4.18.2",
     "mongodb": "^4.11.0",
     "nodemon": "^2.0.20"
