--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,8 @@
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "mongodb": "^4.11.0",
-    "nodemon": "^2.0.20"
+    "nodemon": "^2.0.20",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0"
   }
 }
