--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "mongodb": "^4.11.0",
     "nodemon": "^2.0.20",
     "passport": "^0.6.0",
