--- a/server/frontend/package.json
+++ b/server/frontend/package.json
@@ -41,5 +41,6 @@
     "eslint": "^8.27.0",
     "eslint-config-prettier": "^8.5.0",
     "prettier": "^2.7.1"
-  }
+  },
+  "proxy": "http:localhost3001"
 }
