--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "body-parser": "^1.20.1",
+    "cookie-parser": "^1.4.6",
     "eslint-plugin-react": "^7.31.10",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
