--- a/server/package.json
+++ b/server/package.json
@@ -15,6 +15,7 @@
     "prettier": "^2.7.1"
   },
   "dependencies": {
+    "bcrypt": "^5.1.0",
     "body-parser": "^1.20.1",
     "cookie-parser": "^1.4.6",
     "eslint-plugin-react": "^7.31.10",
