--- a/server/vercel.json
+++ b/server/vercel.json
@@ -6,7 +6,7 @@
       "use": "@vercel/node"
     },
     {
-      "src": "/frontend/build/**",
+      "src": "/frontend/build/static/**",
       "use": "@vercel/static"
     }
   ],
@@ -17,7 +17,7 @@
     },
     {
       "src": "/",
-      "dest": "/frontend/build/index.html"
+      "dest": "/frontend/build/static"
     },
     {
       "src": "/(.+)",
