--- a/server/vercel.json
+++ b/server/vercel.json
@@ -17,7 +17,7 @@
     },
     {
       "src": "/",
-      "dest": "/frontend/build/static"
+      "dest": "/frontend/build/index.html"
     },
     {
       "src": "/(.+)",
