--- a/server/vercel.json
+++ b/server/vercel.json
@@ -6,8 +6,8 @@
       "use": "@vercel/node"
     },
     {
-      "src": "/frontend",
-      "use": "@vercel/react"
+      "src": "/frontend/build/**",
+      "use": "@vercel/static"
     }
   ],
   "routes": [
