--- a/server/vercel.json
+++ b/server/vercel.json
@@ -1,5 +1,16 @@
 {
   "version": 2,
+  "buildCommand": "cd frontend && yarn install && yarn build",
+  "builds": [
+    {
+      "src": "index.js",
+      "use": "@vercel/node"
+    },
+    {
+      "src": "/frontend/build/**",
+      "use": "@vercel/static"
+    }
+  ],
   "routes": [
     {
       "src": "/api/(.*)",
