--- a/server/vercel.json
+++ b/server/vercel.json
@@ -7,8 +7,8 @@
       "use": "@vercel/node"
     },
     {
-      "src": "/frontend/build/**",
-      "use": "@vercel/static"
+      "src": "/frontend",
+      "use": "@vercel/react"
     }
   ],
   "routes": [
