Added icons, hover effect and updated login/sign up page

--- a/server/frontend/.eslintrc.json
+++ b/server/frontend/.eslintrc.json
@@ -17,6 +17,7 @@
     "linebreak-style": ["error", "unix"],
     "quotes": ["error", "double"],
     "semi": ["error", "always"],
-    "no-console": 0
+    "no-console": 0,
+    "no-unused-vars": 1
   }
 }
